# novel_check

./: Dockerfile  README.md  pyproject.toml
data/: filtered_friends_20240426_044818.csv  keyword_counts_20240426_044818.csv  narou_data_20240423_153649.csv  narou_data_20240426_004336.csv  narou_data_20240426_044818.csv
script/: analyze.py  data_make.py
