[tool.poetry]
name = "novel-check"
version = "0.1.0"
description = ""
authors = ["littlebirdpp <suzuki-ga@kadokawa.jp>"]
readme = "README.md"
packages = [{include = "novel_check"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^1.26.4"
requests = "^2.31.0"
matplotlib = "^3.8.4"
networkx = "^3.3"
counter = "^1.0.0"
scipy = "^1.13.0"
japanize-matplotlib = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
